--- a/react-client/src/pages/Landing.css
+++ b/react-client/src/pages/Landing.css
@@ -1,6 +1,5 @@
 .landing-page-wrapper{
   padding: 0 clamp(20px, 6vw, 150px);
-  overflow-x: hidden;
 }
 
 
